2023-08-27 Albert Chu <chu11@llnl.gov>

	* configure.ac: fix warning by moving AC_USE_SYSTEM_EXTENSIONS
	earlier in the file before some checks are done.

2023-07-18 Albert Chu <chu11@llnl.gov>

	* common/portability/freeipmi-portability.h: Fix portability of
	cbrt() redefinition.  cube root is x^(1/3) not x^-3.

2023-06-22 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	Vadatech VT811.

2023-06-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include: Add missing xilinx header to dist.

2023-06-06 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.h,
	common/toolcommon/tool-cmdline-common.c: Remove legacy SDR options
	-f and -q.  Update users accordingly.

	* ipmi-config/ipmi-config.h: Remove legacy / unused macro.

	* ipmi-config: Remove legacy -f command line option.

	* ipmi-oem: Remove intelnm legacy commands
	get-node-manager-alert-thresholds and
	set-node-manager-alert-thresholds.

	* ipmi-oem: Remove legacy support of "inlet" as input for
	"get-node-manager-capabilities policytrigger" and
	"set-node-manager-policy policytrigger".

2023-06-05 Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_units): Handle special case when sensor has units
	"RPM" and the units rate is "per minute".

2023-06-05 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec: Update enterprise numbers scripts

	* libfreeipmi/spec: Update enterprise numbers.  Hand remove few
	instances where vendor decided to put their URL in their company
	name.

2023-06-05 Albert Chu <chu11@llnl.gov>

	* ipmi-oem: Remove legacy Dell get-system-info "slot-number" key.
	Users should use "blade-slot-info".

	* bmc-watchdog: remove legacy --logfile option and config
	file support.

	* libfreeipmi: remove legacy Dell macro from reverse engineering attempt.

2023-06-02 Albert Chu <chu11@llnl.gov>

	* libfreeipmi: Fix typo.

2023-05-15 Albert Chu <chu11@llnl.gov>
