@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: hostlist.c,v 1.3 2009-12-16 17:49:39 chu11 Exp $
+ *  $LSDId: hostlist.c 11882 2012-10-03 17:31:41Z grondo $
  *****************************************************************************
  *  Copyright (C) 2002 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -358,21 +358,6 @@ static void _error(char *file, int line, char *msg, ...)
     return;
 }
 
-static int _advance_past_brackets (char *tok, char **str)
-{
-    /* if _single_ opening bracket exists b/w tok and str, push str
-     * past first closing bracket to next seperator */
-    if (   memchr(tok, '[', *str - tok) != NULL
-        && memchr(tok, ']', *str - tok) == NULL ) {
-        char *q = strchr(*str, ']');
-        if (q && memchr(*str, '[', q - *str) == NULL) {
-            *str = q + 1;
-            return (1);
-        }
-    }
-
-    return 0;
-}
 
 /*
  * Helper function for host list string parsing routines
@@ -383,13 +368,16 @@ static int _advance_past_brackets (char *tok, char **str)
  * (with modifications to support bracketed hostlists, i.e.:
  *  xxx[xx,xx,xx] is a single token)
  *
+ * _next_tok now handles multiple brackets within the same token,
+ * e.g.  node[01-30]-[1-2,6].
  */
 static char * _next_tok(char *sep, char **str)
 {
     char *tok;
+    int level = 0;
 
     /* push str past any leading separators */
-    while (**str != '\0' && strchr(sep, **str) != '\0')
+    while (**str != '\0' && strchr(sep, **str))
         (*str)++;
 
     if (**str == '\0')
@@ -398,19 +386,15 @@ static char * _next_tok(char *sep, char **str)
     /* assign token ptr */
     tok = *str;
 
-    /*
-     * Advance str past any separators, but if a separator occurs between
-     *  brackets, e.g. foo[0-3,5], then advance str past closing brackets and
-     *  try again.
-     */
-    do {
-        /* push str past token and leave pointing to first separator */
-        while (**str != '\0' && strchr(sep, **str) == '\0')
-            (*str)++;
-    } while (_advance_past_brackets (tok, str));
+    while ( **str != '\0' &&
+	    (level != 0 || strchr(sep, **str) == NULL) ) {
+      if ( **str == '[' ) level++;
+      else if ( **str == ']' ) level--;
+      (*str)++;
+    }
 
    /* nullify consecutive separators and push str beyond them */
-    while (**str != '\0' && strchr(sep, **str) != '\0')
+    while (**str != '\0' && strchr(sep, **str) != NULL)
         *(*str)++ = '\0';
 
     return tok;
@@ -490,7 +474,7 @@ static int host_prefix_end(const char *hostname)
 static hostname_t hostname_create_with_suffix (const char *hostname, int idx)
 {
     hostname_t hn = NULL;
-    char *p = '\0';
+    char *p = "\0";
 
     assert(hostname != NULL);
 
@@ -992,9 +976,13 @@ static int hostrange_hn_within(hostrange_t hr, hostname_t hn)
 
     /*
      *  Finally, check whether [hn], with a valid numeric suffix,
-     *   falls within the range of [hr].
+     *   falls within the range of [hr] if [hn] and [hr] prefix are
+     *   identical.
      */
-    if (hn->num <= hr->hi && hn->num >= hr->lo) {
+    if ((len_hr == len_hn)
+        && (strcmp (hn->prefix, hr->prefix) == 0)
+        && (hn->num <= hr->hi)
+        && (hn->num >= hr->lo)) {
         int width = hostname_suffix_width (hn);
         if (!_width_equiv(hr->lo, &hr->width, hn->num, &width))
             return -1;
