@@ -1,3 +1,8 @@
+2023-08-28 Albert Chu <chu11@llnl.gov>
+
+	* common/miscutil/hostlist.[ch]: Update to version from pdsh to
+	eliminate compiler warnings.
+
 2023-08-27 Albert Chu <chu11@llnl.gov>
 
 	* configure.ac: fix warning by moving AC_USE_SYSTEM_EXTENSIONS
